<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="model"
            type="com.appolica.weatherify.android.ui.activity.enablelocations.EnableLocationsViewModel"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/activity_enable_locations"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.appolica.weatherify.android.ui.activity.enablelocations.EnableLocationsActivity">

        <ImageView
            android:id="@+id/imageViewBackground"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:src="@drawable/compass_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="ContentDescription"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/textViewTitle"
            fontPath="fonts/OpenSans-Semibold.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:text="@string/enable_locations_title"
            android:textColor="@color/enableLocationsTitle"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewBackground"/>

        <TextView
            android:id="@+id/textViewSubtitle"
            fontPath="fonts/OpenSans-Light.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/enable_locations_subtitle"
            android:textColor="@color/mainTextLight"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitle"/>

        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/rippleLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:onClick="@{() -> model.onGoToFavourites()}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:mrl_rippleOverlay="true"
            app:mrl_rippleRoundedCorners="4dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/textViewOr">

            <Button
                android:id="@+id/rippleButtonGoToFav"
                fontPath="fonts/OpenSans-Light.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/enable_locations_button_background"
                android:paddingEnd="7dp"
                android:paddingStart="7dp"
                android:text="@string/enable_locations_button"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp"/>

        </com.balysv.materialripple.MaterialRippleLayout>

        <TextView
            android:id="@+id/textViewOr"
            fontPath="fonts/OpenSans-Light.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textColor="@color/mainTextLight"
            android:textSize="18sp"
            android:visibility="@{model.hideSettingsButton}"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/textViewEnableLocation"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/textViewEnableLocation"
            fontPath="fonts/OpenSans-Light.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:onClick="@{() -> model.onGoToSettings()}"
            android:text="@string/enable_locations_click_text"
            android:textColor="@drawable/dark_text_click_background"
            android:textSize="18sp"
            android:visibility="@{model.hideSettingsButton}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.93"/>

        <ImageView
            android:id="@+id/imageViewCompassBody"
            android:layout_width="wrap_content"
            android:layout_height="145dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewBackground"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@+id/imageViewBackground"
            app:layout_constraintTop_toTopOf="@+id/imageViewBackground"
            app:srcCompat="@drawable/compass_body"/>

        <ImageView
            android:id="@+id/imageViewArrow"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewCompassBody"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintLeft_toLeftOf="@+id/imageViewCompassBody"
            app:layout_constraintRight_toRightOf="@+id/imageViewCompassBody"
            app:layout_constraintTop_toTopOf="@+id/imageViewCompassBody"
            app:layout_constraintVertical_bias="0.58000004"
            app:srcCompat="@drawable/compass_arrow"/>
    </android.support.constraint.ConstraintLayout>
</layout>