<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View"/>

        <variable
            name="hasFavorites"
            type="boolean"/>

        <variable
            name="clickListener"
            type="com.appolica.weatherify.android.ui.activity.favourites.FavouritesClickListener"/>

    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/activity_favourites"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/menuScreenBackground"
        tools:context="com.appolica.weatherify.android.ui.activity.favourites.FavouritesActivity">

        <TextView
            android:id="@+id/editTextFavSearch"
            android:layout_width="0dp"
            android:layout_height="34dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/text_bar_top_margin"
            android:background="@drawable/favourites_textfield_background"
            android:drawablePadding="9dp"
            android:drawableStart="@drawable/search_icon"
            android:ems="10"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:onClick="@{() -> clickListener.onTextFieldClick()}"
            android:padding="5dp"
            android:paddingBottom="7dp"
            android:paddingTop="7dp"
            android:text="@string/add_location_hint"
            android:textColor="@color/favouritesTextFieldText"
            android:textColorHint="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/imageViewFavAddNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/no_favourites_text"
            android:visibility="@{hasFavorites ? View.INVISIBLE : View.VISIBLE}"
            app:layout_constraintHorizontal_bias="0.23"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextFavSearch"/>

        <TextView
            android:id="@+id/textViewEmptyStateLabel"
            android:layout_width="252dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:drawablePadding="11dp"
            android:drawableTop="@drawable/no_favourites_icon"
            android:gravity="center"
            android:text="@string/favourites_screen_empty_state_label"
            android:textColor="@android:color/white"
            android:visibility="@{hasFavorites ? View.INVISIBLE : View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextFavSearch"
            app:layout_constraintVertical_bias="0.48000002"/>

        <TextView
            android:id="@+id/favouriteItemsLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="26dp"
            android:text="@string/favorites__items_label"
            android:textAllCaps="true"
            android:textColor="@color/favouritesItemTextViewColor"
            android:textSize="16sp"
            android:visibility="@{hasFavorites ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextFavSearch"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewFavSuggestions"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="9dp"
            android:clipChildren="false"
            android:visibility="@{hasFavorites ? View.VISIBLE : View.INVISIBLE}"
            app:hasFixedSize="@{true}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/favouriteItemsLabel"
            tools:listitem="@layout/favourites_item"/>

        <ImageView
            android:id="@+id/imageViewFavouritesSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{clickListener::onSettingsClick}"
            android:paddingEnd="@dimen/top_buttons_side_padding"
            android:paddingTop="@dimen/top_buttons_top_padding"
            android:src="@drawable/ic_settings"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/imageViewFavouriteLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/weatherify_logo"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewFavouritesSettings"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/imageViewFavouritesSettings"/>

        <ImageView
            android:id="@+id/favouritesCloseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> clickListener.onCloseClick()}"
            android:paddingStart="@dimen/top_buttons_side_padding"
            android:paddingTop="@dimen/top_buttons_top_padding"
            android:src="@drawable/close_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </android.support.constraint.ConstraintLayout>
</layout>